Sembra che proportion funzioni